more fiddling with travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ install: "pip install -r requirements.txt"
 script: nosetests
 
 after_success:
-  - "make docs"
+  - "make doc"
+  - "make doc-push"
 
 secure: "DUm8EDu6YRlfXk/BoGy7fsTtuMKWyjaMwkjKAKuDq/+vBAouTY163j8xtSqbwEnyW7x1EfUM7S4dbz+e77S6X1pxbf1i+29swk+LvTTNoLo11YqMtm+vZqQD+sCaf5ipq5TMv8Fjcpp1omGAXd3R3W4gMvNztRxGxmjV1wFe1hI="
 
