--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 # All this stupidity is needed because of
 # https://github.com/travis-ci/travis-ci/issues/929
 after_success:
-  - python travis_after_all.py
+  - python2 travis_after_all.py
   - export $(cat .to_export_back)
   - |
       if [ "$BUILD_LEADER" = "YES" ]; then
