--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
   - "3.4"
   - "3.5"
 
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-elisp
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq emacs-snapshot
+
 install: "pip install -r requirements.txt; pip install sphinx"
 script:
   - curl -o travis_after_all.py https://raw.githubusercontent.com/dmakhno/travis_after_all/master/travis_after_all.py
@@ -14,13 +19,6 @@ after_success:
   - "make doc-push"
 
 secure: "DUm8EDu6YRlfXk/BoGy7fsTtuMKWyjaMwkjKAKuDq/+vBAouTY163j8xtSqbwEnyW7x1EfUM7S4dbz+e77S6X1pxbf1i+29swk+LvTTNoLo11YqMtm+vZqQD+sCaf5ipq5TMv8Fjcpp1omGAXd3R3W4gMvNztRxGxmjV1wFe1hI="
-
-addons:
-  apt:
-    sources:
-      - ubuntu-elisp
-    packages:
-      - emacs-snapshot
 
 env:
   GH_REF: github.com/aecay/lovett.git
