make readme file proper rst

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = lovett
 author = Aaron Ecay
 author-email = aaronecay@gmail.com
 summary = Turning corpora into Python
-description-file = README
+description-file = README.rst
 home-page = https://test.com
 license = GPL3
 classifier =
