--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-requests~=2.7
-pygithub~=1.25
+ipython~=4.0
+ipywidgets~=4.1
+palettable~=2.1
+pygithub~=1.26
+requests~=2.8
 sqlalchemy~=1.0
-pyprind
-yattag
-palettable
+yattag~=1.5
