setup.cfg: update to automatically install ipython widget files

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,11 @@ keywords =
 [files]
 packages =
     lovett
+data_files =
+    share/jupyter/nbextensions/lovett =
+        lovett/js/index.js
+        lovett/js/extension.js
+    etc/jupyter/nbconfig/notebook.d = lovett/js/lovett.json
 
 [flake8]
 ignore = E501
